--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Bwoya Ssibal</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href ".css">
+
+
+        <title>The Cover of my Book</title>
     </head>
     <body>
-        <h1>AAAAAAAAAAAAAY</h1>
+        <h1>Shawn Michael Sabela</h1>
+        <h2>Chapter 1</h2>
+        <h3>The sole desire to learn and experience all that is to be offered, That is me. <br>The embodiment of curiosity, a Jack of all trades pushing to be an Ace of all trades</h3>
+        <p>
+            <button onclick="toggleSection('ssibal')">
+                Interests & Hobbies
+            </button>
+        <section id="ssibal" class="hidden"></section>    
+        </p>
     </body>
 </html>
