Body finished + started on the footer for the hyperlinks

--- a/index.html
+++ b/index.html
@@ -17,7 +17,21 @@
             <button onclick="toggleSection('ssibal')">
                 Interests & Hobbies
             </button>
-        <section id="ssibal" class="hidden"></section>    
+        <section id="ssibal" class="hidden"></section>
+            <h1></h1>
+            <ul>
+                <br>As someone who is curious, I enjoy a lot of forms of art like music, painting, fashion, etc..</br>
+                <br>I also spend a lot of time on video games both online and offline.</br> 
+                <br>And if I am not playing games, I watch films or read books.</br>
+            </ul>    
         </p>
     </body>
+    <footer>
+        <h4>Ways to Contact Me:</h4>
+        <ul2>
+            <br>
+            <br>
+            <br>
+        </ul2>
+        </footer>
 </html>
