roughly done on the footer (might change)

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h3>The sole desire to learn and experience all that is to be offered, That is me. <br>The embodiment of curiosity, a Jack of all trades pushing to be an Ace of all trades</h3>
         <p>
             <button onclick="toggleSection('ssibal')">
-                Interests & Hobbies
+                About Me
             </button>
         <section id="ssibal" class="hidden"></section>
-            <h1></h1>
+            <h1>Interests & Hobbies</h1>
             <ul>
                 <br>As someone who is curious, I enjoy a lot of forms of art like music, painting, fashion, etc..</br>
                 <br>I also spend a lot of time on video games both online and offline.</br> 
@@ -26,12 +26,21 @@
             </ul>    
         </p>
     </body>
+
     <footer>
-        <h4>Ways to Contact Me:</h4>
-        <ul2>
-            <br>
-            <br>
-            <br>
-        </ul2>
-        </footer>
+        <div id="Socials" class="tabcontent">
+            <section class = "description">
+                <h4>Ways to Contact Me:</h4>
+                <div class = "picture">
+                    <img src="https://i.pinimg.com/1200x/d1/a9/7d/d1a97d8c43c901ecdc5253511114722d.jpg" alt="socmed image">
+                </div>
+            
+                <div class="icons">
+                    <img src="https://img.freepik.com/free-vector/new-2023-twitter-logo-x-icon-design_1017-45418.jpg?size=338&ext=jpg&ga=GA1.1.2008272138.1726272000&semt=ais_hybrid" alt="ximage" width="100" height="100">
+                    <img src="https://cdn.icon-icons.com/icons2/3398/PNG/512/circle_facebook_logo_icon_214753.png" alt="fbimage" height="120" width="120">
+                    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="githubimage" height="120" width="120">
+                </div>
+            </section>
+        </div>
+    </footer>
 </html>
