--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
                 <h4>Ways to Contact Me:</h4>
             
                 <div class="icons">
-                    <img src="https://img.freepik.com/free-vector/new-2023-twitter-logo-x-icon-design_1017-45418.jpg?size=338&ext=jpg&ga=GA1.1.2008272138.1726272000&semt=ais_hybrid" alt="ximage" width="100" height="100">
+                    <img src="https://cdn3.iconfinder.com/data/icons/transparent-on-dark-grey/500/icon-04-512.png" alt="igimage" width="100" height="100">
                     <img src="https://cdn.icon-icons.com/icons2/3398/PNG/512/circle_facebook_logo_icon_214753.png" alt="fbimage" height="120" width="120">
-                    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="githubimage" height="120" width="120">
                 </div>
             </section>
         </div>
