--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h2>Chapter 1</h2>
         <h3>The sole desire to learn and experience all that is to be offered, That is me. <br>The embodiment of curiosity, a Jack of all trades pushing to be an Ace of all trades</h3>
         <p>
-            <button onclick="toggleSection('ssibal')">
+            <button onclick="toggleSection('Information')">
                 About Me
             </button>
-        <section id="ssibal" class="hidden"></section>
+        <section id="AboutMe" class="hidden"></section>
             <h1>Interests & Hobbies</h1>
             <ul>
                 <br>As someone who is curious, I enjoy a lot of forms of art like music, painting, fashion, etc..</br>
