Style added + background image test

--- a/hobbies.html
+++ b/hobbies.html
@@ -3,8 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gallery</title>
+        <title>Hobbies</title>
         <link rel="stylesheet" href=".css">
+        <style>
+            body{
+                font-family: "Times New Roman", Times, serif;
+                margin: 0;
+                padding: 0;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                height: 100vh;
+                background-image: url('https://shawnn-yaperdole.github.io/ssibal/457273573_966422012164653_3599805704009801998_n.jpg');
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+            }
+
+        </style>
     </head>
     <body>
 
