2nd test for backgroud image

--- a/hobbies.html
+++ b/hobbies.html
@@ -16,7 +16,7 @@
                 justify-content: center;
                 height: 100vh;
                 background-image: url('https://shawnn-yaperdole.github.io/ssibal/457273573_966422012164653_3599805704009801998_n.jpg');
-                background-size: cover;
+                background-size: contain;
                 background-position: center;
                 background-repeat: no-repeat;
             }
