--- a/hobbies.html
+++ b/hobbies.html
@@ -15,15 +15,64 @@
                 align-items: center;
                 justify-content: center;
                 height: 100vh;
+                width: 100vw;
                 background-image: url('https://shawnn-yaperdole.github.io/ssibal/457273573_966422012164653_3599805704009801998_n.jpg');
                 background-size: contain;
                 background-position: center;
                 background-repeat: no-repeat;
+                background-color:#000000ee;
             }
 
+            .gallery h1{
+                font-family:'Display',"Times New Roman", Times, serif;
+                font-size: 50px;
+                margin-bottom: 20px;
+            }
+
+            .image-container{
+                display: flex;
+                justify-content: center;
+                gap: 50px;
+                margin-bottom: 20px;
+            }
+
+            .image-container img{
+                max-width: 250px;
+                max-height: 250px;
+                opacity: 0;
+                transition: opacity 0.5s;
+            }
+
+            .image-container div:hover img {
+                opacity: 1;
+            }
+
+            #description {
+                font-family: sans-serif;
+                font-size: 18.px;
+                color: #333;
+                text-align: center;
+                margin-top: 10px;
+            }
         </style>
     </head>
     <body>
+        <div class="gallery">
+            <h1>Hobbies</h1>
+
+            <div class="image-container">
+                <div>
+                    <p>Cover</p>
+                    <img src="">
+                </div>
+                <div>
+                    <p>aaa</p>
+                    <img src="">
+                </div>
+            </div>
+
+            <p id="description">Hover over the hobbies to see related images</p>
+        </div>
 
     </body>
     </html>
