Added the image and did some final touches

--- a/hobbies.html
+++ b/hobbies.html
@@ -16,8 +16,8 @@
                 justify-content: center;
                 height: 100vh;
                 width: 100vw;
-                background-image: url('https://shawnn-yaperdole.github.io/ssibal/457273573_966422012164653_3599805704009801998_n.jpg');
-                background-size: contain;
+                background-image: url('https://shawnn-yaperdole.github.io/ssibal/457815828_1063226142122614_7853103010804444215_n.jpg');
+                background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
                 background-color:#000000ee;
@@ -62,12 +62,20 @@
 
             <div class="image-container">
                 <div>
-                    <p>Cover</p>
-                    <img src="">
+                    <p>Drawing</p>
+                    <img src="https://shawnn-yaperdole.github.io/ssibal/458507824_505399225452138_798721811052097544_n.jpg">
                 </div>
                 <div>
-                    <p>aaa</p>
-                    <img src="">
+                    <p>Music</p>
+                    <img src="https://shawnn-yaperdole.github.io/ssibal/457617216_882964123716701_5532724723915771421_n.jpg">
+                </div>
+                <div>
+                    <p>Photography</p>
+                    <img src="https://shawnn-yaperdole.github.io/ssibal/457882625_885572026379183_1904852292239830525_n.jpg">
+                </div>
+                <div>
+                    <p>Design</p>
+                    <img src="https://shawnn-yaperdole.github.io/ssibal/457273573_966422012164653_3599805704009801998_n.jpg", height="200">
                 </div>
             </div>
 
