--- a/gallery.html
+++ b/gallery.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gallery</title>
-        <link rel="stylesheet" href=".css">
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gallery</title>
+    <link rel="stylesheet" href="Style-g.css">
+</head>
+<body>
+    <div class="gallery">
+        <h1>Gallery</h1>
+        <div id="image-container">
+            <img id="displayed-image" src="" alt="">
+            <p id="image-description">Some of my Captured Sceneries</p>
+        </div>
+    </div>
 
-    </body>
-    </html>
+    <div class="buttons">
+        <button onclick="showImage('https://shawnn-yaperdole.github.io/ssibal/457815828_1063226142122614_7853103010804444215_n.jpg')">1</button>
+        <button onclick="showImage('https://shawnn-yaperdole.github.io/ssibal/457383620_1034971587892775_1077676210735489845_n.jpg')">2</button>
+        <button onclick="showImage('https://shawnn-yaperdole.github.io/ssibal/458985035_382461084904074_8699409341805407325_n.jpg')">3</button>
+        <button onclick="showImage('https://shawnn-yaperdole.github.io/ssibal/457512485_1058434322304143_402552068948066792_n.jpg')">4</button>
+        <button onclick="showImage('https://shawnn-yaperdole.github.io/ssibal/458343761_855055046696075_3564455123971572979_n.jpg')">5</button>
+        <button onclick="showImage('https://shawnn-yaperdole.github.io/ssibal/459240493_494377923489925_6047411768495023551_n.jpg')">6</button>
+        <button onclick="showImage('https://shawnn-yaperdole.github.io/ssibal/458250330_1441516059864470_4519404609223832362_n.jpg')">7</button>
+    </div>
+    <script>
+        function showImage(imageSrc) {
+            document.getElementById('displayed-image').src = imageSrc;
+        }
+    </script>
+</body>
+</html>
