Minor fixes + Incorporated the css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href ".css">
+        <link rel="stylesheet" href "Style.css">
 
 
-        <title>The Cover of my Book</title>
+        <title>Cover of the Book</title>
     </head>
     <body>
-        <h1>Shawn Michael Sabela</h1>
-        <h2>Chapter 1</h2>
+        <h1>My Personal Website</h1>
+        <h2>Shawn Michael Sabela</h2>
         <h3>The sole desire to learn and experience all that is to be offered, That is me. <br>The embodiment of curiosity, a Jack of all trades pushing to be an Ace of all trades</h3>
         <p>
             <button onclick="toggleSection('Information')">
