--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hobbies</title>
-        <link rel="stylesheet" href=".css">
+        <link rel="stylesheet" href="Style-h.css">
         <style>
             body{
                 font-family: "Times New Roman", Times, serif;
