Added Js for index + incorporated it

--- a/index.html
+++ b/index.html
@@ -40,15 +40,6 @@
             </section>
         </div>
     </footer>
-    <script>
-        function toggleSection() {
-            var section = document.getElementById('interests-hobbies');
-            if (section.classList.contains('hidden')) {
-                section.classList.remove('hidden');
-            } else {
-                section.classList.add('hidden');
-            }
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
